Added login redirection when adding item without loggin in

--- a/SeneakerKop/SeneakerKop.csproj
+++ b/SeneakerKop/SeneakerKop.csproj
@@ -28,4 +28,8 @@
     <None Include="Pages\Shop\ProdDetails.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Cart\" />
+  </ItemGroup>
+
 </Project>
